objects/LLC_BI__Titled_Property_Details__c.object
<CustomObject>
    <description>This extension object captures granular details of Titled collateral.</description>
    <fields>
        <fullName>LLC_BI__Engine_Size__c</fullName>
        <description>Users populate this optional field to indicate the engine size of the titled collateral.</description>
        <inlineHelpText>Enter a value for the engine capacity or displacement volume of the titled collateral.</inlineHelpText>
        <label>Engine Size</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Factory_Price__c</fullName>
        <description>Users populate this optional field to indicate the price of the vehicle billed by the manufacturer.</description>
        <inlineHelpText>Enter the price of the vehicle billed by the manufacturer.</inlineHelpText>
        <label>Factory Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Financing_Type__c</fullName>
        <description>Users populate this optional field to indicate the type of financing used to purchase the vehicle.</description>
        <inlineHelpText>Select the type of financing used to purchase the vehicle.</inlineHelpText>
        <label>Financing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Fuel_Type__c</fullName>
        <description>Users populate this optional field to indicate the fuel system of the vehicle.</description>
        <inlineHelpText>Select the type of fuel used for the vehicle.</inlineHelpText>
        <label>Fuel Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Diesel</fullName>
                </value>
                <value>
                    <fullName>Gasoline</fullName>
                </value>
                <value>
                    <fullName>Ethanol</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Gross_Vehicle_Weight__c</fullName>
        <description>Users populate this optional field to indicate the weight of the vehicle.</description>
        <inlineHelpText>Enter the gross weight of the vehicle.</inlineHelpText>
        <label>Gross Vehicle Weight</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Has_Passed_State_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this checkbox if the piece of collateral has passed the applicable state or province inspection. By default, it is false.</description>
        <inlineHelpText>Select this checkbox if the piece of collateral has passed the applicable state or province inspection.</inlineHelpText>
        <label>Has Passed State Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Recreational__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional checkbox if the piece of collateral is used for recreational purposes. By default, it is false.</description>
        <inlineHelpText>Select this checkbox if the piece of collateral is used for recreational purposes.</inlineHelpText>
        <label>Is Recreational</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Odometer_Reading__c</fullName>
        <description>Users populate this optional field to indicate the odometer reading of the titled vehicle.</description>
        <inlineHelpText>Enter the odometer reading of the titled vehicle on the origination date.</inlineHelpText>
        <label>Odometer Reading</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Registration_Number__c</fullName>
        <description>Users populate this optional field to indicate the license plate or registration number of the vehicle.</description>
        <inlineHelpText>Enter the license plate or registration number of the vehicle.</inlineHelpText>
        <label>Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Registration_Type__c</fullName>
        <description>Users populate this optional field to indicate the registration type of the vehicle.</description>
        <inlineHelpText>Select the type of registration that applies to the vehicle.</inlineHelpText>
        <label>Registration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Passenger</fullName>
                </value>
                <value>
                    <fullName>Livery</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Seating_Capacity__c</fullName>
        <description>Users populate this optional field to indicate the legal seating capacity of the vehicle.</description>
        <inlineHelpText>Enter the legal seating capacity of the vehicle.</inlineHelpText>
        <label>Seating Capacity</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Runtime__c</fullName>
        <description>Users populate this optional field to indicate the total runtime of the engine for the titled collateral.</description>
        <inlineHelpText>Enter the total runtime of the engine for the titled collateral.</inlineHelpText>
        <label>Total Runtime</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Transmission_Type__c</fullName>
        <description>Users populate this optional field to indicate the transmission type of the vehicle.</description>
        <inlineHelpText>Select the type of transmission that applies to the vehicle.</inlineHelpText>
        <label>Transmission Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Automatic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Titled Property Details</label>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Titled Property Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>